# arata2026

./: .zenodo.json  CITATION.cff  README.md  analyze_pcp.py  patch_shift.py  pcp_common.py  pyproject.toml  random_distribution.py
.github/workflows/: ci.yml  release.yml
tests/: test_patch_shift.py  test_pcp_common.py  test_random_distribution.py
